// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OtpCode render should correctly render Otp component 1`] = `
<div email="user@email.com" password="11111111" submithandler="() => {}">
  <otp-form-stub email="user@email.com" password="11111111" submithandler="() => {}"></otp-form-stub>
</div>
`;

exports[`OtpCode render should render otp form 1`] = `
<div email="user@email.com" password="11111111" submithandler="() => {}">
  <otp-form-stub email="user@email.com" password="11111111" submithandler="() => {}"></otp-form-stub>
</div>
`;

exports[`OtpCode render should render recover form 1`] = `
<div email="user@email.com" password="11111111" submithandler="() => {}">
  <recover-form-stub email="user@email.com" password="11111111" submithandler="() => {}"></recover-form-stub>
</div>
`;
